# cpu

./: .gitignore  CMakeLists.txt  bin  bincmp.py  cmp.txt  fabric.py  helper.py  ledgertest.py  regtypes.txt  sort_output.txt  validator.py
assembler/: CMakeLists.txt  a.out  assembler.c  fabric_example.txt
assembler/asmtests/: acctest.asm  add.asm  bigreg.asm  call.asm  div.asm  dotproduct.asm  double_jmp.asm  fib.asm  hardtest.asm  jmptable.asm  long_code.asm  matrix.asm  quadratic.asm  refsegment.asm  segment.asm  select_test.asm  sort.asm  sort1.asm  sqrt.asm  strlen.asm  template.asm  test.asm
assembler/programs/c_examples/: matrix.c
assembler/src/: CMakeLists.txt  analyzer.c  asm_str_stuff.c  assembler.c  commons.c  decoder.c  error.c  hashmap.c  main.c  strtools.c  token.h
assembler/src/commons/: CMakeLists.txt
assembler/src/inc/: analyzer.h  asm_str_stuff.h  assembler.h  commons.h  decoder.h  error.h  fileio.h  flags.h  hashmap.h  strtools.h
assembler/src/language/: CMakeLists.txt
assembler/tests/: copy.asm  test.asm
cpuemu/src/commons/: CMakeLists.txt
cpuemu/src/tests/: CMakeLists.txt  grader.c  main.c  rubrik.c  syntax.txt  testrunner.c  tests_entry.c
cpuemu/src/wcpu/: CMakeLists.txt  main.c
cpuemu/src/wcpu_emu/: CMakeLists.txt  disassembler.c  emuhook.c  emuhook.h  export.c
cpuemu/src/wcpu_interface/: CMakeLists.txt  interface.h  message.h
cpuemu/src/wcpu_lib/: CMakeLists.txt  core.c  cpumemory.c  debug.c  disassembler.c  hydra.c  manager.c  manager.h  palu.c  pjmp.c  pmem.c  shell.c
cpuemu/src/wcpu_vm/: CMakeLists.txt  vm.c  vm.h  vm_alu.c  vm_alu.h  vm_cpu.c  vm_cpu.h  vm_cpu_path.c  vm_cpu_path.h  vm_cpu_utils.c  vm_cpu_utils.h  vm_jmp.c  vm_jmp.h  vm_mem.c  vm_mem.h  vm_sys.c  vm_sys.h  vmhook.c  vmhook.h
simulator/: CMakeLists.txt
simulator/commons/: CMakeLists.txt  commons.c  commons.h  dyndata.h  hashmap.h  isa.c  isa.h  loader.c  loader.h  token.c  token.h
simulator/commons/logger/: logger.h
simulator/configfiles/: basic_config.txt
simulator/device_commons/: CMakeLists.txt
simulator/device_commons/devimpl/: CMakeLists.txt  device.c  device_command.c  device_command_impl.h  device_commons.h  device_flags.c  device_mailbox.c  device_message.c  impl_device.h  impl_device_command.h  impl_device_mailbox.h  impl_device_message.h
simulator/device_commons/devshared/: CMakeLists.txt  device.h  device_command.h  device_description.h  device_event.h  device_list.h  device_mailbox.h  device_message.h  device_schedule.h  device_vtable.h
simulator/device_commons/shared/: CMakeLists.txt  device.h  device_command.h  device_message.h
simulator/devices/: CMakeLists.txt
simulator/devices/disk/: CMakeLists.txt  disk.h  disk_version.h.in
simulator/devices/dma/: CMakeLists.txt  dma.h  dma_version.h.in
simulator/devices/fakeio/: CMakeLists.txt  dev_fakeio.c  dev_fakeio_device_config_setting.c  fakeio.c  fakeio.h  fakeio_device_config_setting.c  fakeio_device_config_setting.h  fakeio_version.h.in
simulator/devices/ram/: CMakeLists.txt  dev_ram.c  dev_ram_device_config_setting.c  dev_ram_device_config_setting.h  ram.c  ram.h  ram_device_config_setting.c  ram_device_config_setting.h  ram_version.h.in
simulator/devices/tester/: CMakeLists.txt  tester.c  tester.h
simulator/devices/video/: CMakeLists.txt  video.h  video_version.h.in
simulator/devices/wcpu_emu/: CMakeLists.txt  dev_wcpu.c  dev_wcpu.h  dev_wcpu_device_config_setting.c  dev_wcpu_device_config_setting.h  wcpu.c  wcpu.h  wcpu_device_config_setting.c  wcpu_device_config_setting.h
simulator/devices/wcpu_vm/: CMakeLists.txt  vm.c  vm.h  vm_alu.h  vm_bus.c  vm_bus.h  vm_cpu.c  vm_cpu.h  vm_cpu_utils.c  vm_device_config_setting.h  vm_eval.c  vm_eval.h  vm_op.c  vm_op.h  vm_path.c  vm_path.h  vm_regs.c  vm_regs.h  vm_sys.c  vm_utils.c  vm_utils.h  vm_version.h.in
simulator/share/devimpl/: CMakeLists.txt  device_commons.h
simulator/share/shared/: CMakeLists.txt
simulator/shared/: CMakeLists.txt
simulator/shared/module/: CMakeLists.txt
simulator/shared/monolith/: CMakeLists.txt  monolith_instance.h  monolith_packet.h  monolith_tag.h
simulator/shared/object/: CMakeLists.txt  object_instance.h  object_packet.h  object_tag.h  object_vtable.h
simulator/src/: CMakeLists.txt
simulator/src/commons/: CMakeLists.txt  loader.h
simulator/src/wcpu/: CMakeLists.txt
simulator/src/wcpu_configurer/: CMakeLists.txt  configurer.h
simulator/src/wcpu_emu/: CMakeLists.txt
simulator/src/wcpu_vm/: CMakeLists.txt  vm.c  vm.h  vm_alu.c  vm_cpu.c  vm_cpu.h  vm_cpu_path.c  vm_cpu_utils.h  vm_mem.h  vm_sys.c  vmhook.h
simulator/wcpu/: CMakeLists.txt  main.c
simulator/wcpu/WS_core/: CMakeLists.txt  dynamic_lib.c  dynamic_lib.h  main.c  manager.c  manager.h  module.c  module.h
simulator/wcpu/WS_helpers/: code_decoder.c  debug.c
simulator/wcpu/WS_io/: CMakeLists.txt  IO_configure.c  IO_configure.h  IO_graph.h  IO_parser.c  IO_parser.h  WS_parser.c  WS_parser.h  WSio.h  input_configure.c  input_configure.h  input_parser.c  input_parser.h  ws_sim_configure.c  ws_sim_configure.h
simulator/wcpu/WS_sim/: CMakeLists.txt  SIM_bus.c  SIM_bus.h  SIM_channel.c  SIM_channel.h  SIM_commons.c  SIM_commons.h  SIM_device.c  SIM_device.h  SIM_entry.c  SIM_entry.h  SIM_graph.c  SIM_graph.h  SIM_handle.c  SIM_handle.h  SIM_message.c  SIM_message.h  SIM_object.c  SIM_object.h  SIM_packet.c  SIM_packet.h  SIM_port.c  SIM_port.h  SIM_routetable.c  SIM_routetable.h  SIM_simulator.c  SIM_simulator.h  SIM_transfer.c  SIM_transfer.h  SIM_wire.c  SIM_wire.h  SIM_wireslot.h  actor.h  sim_actor.c  simulator.c  simulator.h  simulator_bus_entry.c  simulator_bus_entry.h  simulator_bus_slot.c  simulator_bus_slot.h  (+2 more)
simulator/wcpu/general/: disassembler.h  manager.c  manager.h  simulator.h
simulator/wcpu/helpers/: code_decoder.h
simulator/wcpu/wcpu_emu/: CMakeLists.txt  emulator.c  emulator_configure.c
simulator/ws/: CMakeLists.txt
simulator/ws/CORE/: CORE_dlhnd.c  CORE_dlhnd.h  CORE_manager.c  CORE_manager.h  main.c
simulator/ws/IO/: CMakeLists.txt  IO_configure.h
simulator/ws/SIM/: SIM_device.h  (+8 more)
(+624 files in other folders)
